# mod_plugins_bevy

./: Cargo.toml  LICENSE  Readme.md  todo.md  todolist.md
examples/: events.rs  executables.rs  fields.rs  prefabs.rs  resources.rs  states.rs  test.rs
examples/test/: main.rs  test_plugin.rs
macros/: Cargo.toml
macros/src/: basic.rs  events.rs  initialization.rs  lib.rs  resources.rs  states.rs  systems.rs
resources/: Cargo.toml
resources/src/: lib.rs
src/: lib.rs
