[package]
name = "mod_plugins"
version = "0.2.0"
edition = "2021"

description = "Reduce plugin boilerplate in the Bevy game engine."
license = "MIT"
repository = "https://github.com/DaylightNebula/mod_plugins_bevy"

[dependencies]
mod_plugins_macros = "0.2.0"
mod_plugins_resources = "0.2.0"
bevy = "0.14.2"
syn = "2.0.53"
proc-macro2 = "1.0.79"
