[package]
name = "mod_plugins_macros"
version = "0.1.1"
edition = "2021"

description = "Reduce plugin boilerplate in the Bevy game engine."
license = "MIT"
repository = "https://github.com/DaylightNebula/mod_plugins_bevy"

[lib]
proc-macro = true

[dependencies]
bevy = "0.14.2"
syn = "2.0.53"
proc-macro2 = "1.0.79"
quote = "1.0.35"
convert_case = "0.6.0"
