[package]
name = "mod_plugins_resources"
version = "0.1.0"
edition = "2021"

description = "Reduce plugin boilerplate in the Bevy game engine."
license = "MIT"
repository = "https://github.com/DaylightNebula/mod_plugins_bevy"

[dependencies]
bevy = "0.13.1"
syn = "2.0.53"
proc-macro2 = "1.0.79"
quote = "1.0.35"
